--- a/package.json
+++ b/package.json
@@ -16,6 +16,15 @@
   "author": "Ian Sinnott <ian@iansinnott.com>",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "node-uuid": "^1.4.1"
+  },
+  "devDependencies": {
+    "chai": "^1.10.0",
+    "gulp": "^3.8.10",
+    "gulp-plumber": "^0.6.6",
+    "gulp-util": "^3.0.1",
+    "mocha": "^2.0.1",
+    "shelljs": "^0.3.0"
   }
 }
