--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "json-db",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A tool for storing data as JSON.",
   "main": "json-db.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test"
   },
   "keywords": [
     "database",
     "json"
   ],
   "engines": {
-    "node": ">=0.11.14"
+    "node": ">=0.10.31"
   },
   "author": "Ian Sinnott <ian@iansinnott.com>",
   "license": "MIT",
